--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")  
+set(PROJECT_VESRION 0.0.${PATCH_VERSION})   
 
-
-set(PROJECT_VESRION 0.0.1)
 project(allocator VERSION ${PROJECT_VESRION})
 
 add_executable(allocator main.cpp)
